Updated styles for chatbox. Added page favicon

--- a/website/project.html
+++ b/website/project.html
@@ -9,26 +9,13 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <title>Marvin: The Paranoid Android</title>
+    <title>About the Project</title>
 </head>
-<body class="flex-container">
+<body>
     <ul class="main-menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="us.html">About us</a></li>
         <li><a href="project.html">About project</a></li>
     </ul>
-
-    <div class="interface-container">
-        <div class="bot-window"></div>
-        <div class="chat">
-            <div id="chatLog" class="chatlog"></div>
-            <div class="input-container">
-                <textarea id="userInput" class="user-input"></textarea>
-                <img id="userSubmit" class="user-submit" src="src/img/send.png">
-            </div>
-        </div>
-    </div>
-
-    <script src="src/js/main.js"></script>
 </body>
 </html>
