Added background fade and bot startup animation

--- a/website/index.html
+++ b/website/index.html
@@ -12,6 +12,8 @@
     <title>Marvin: The Paranoid Android</title>
 </head>
 <body class="flex-container">
+    <div class="bg"></div>
+
     <ul class="main-menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="src/pages/us.html">About us</a></li>
