Updated main.js to use object orientation for improved structure.

--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
         <div class="chat">
             <div id="chatLog" class="chatlog"></div>
             <div class="input-container">
-                <textarea id="userInput" class="user-input"></textarea>
+                <textarea id="userInput" class="user-input" disabled="true"></textarea>
                 <img id="userSubmit" class="user-submit" src="src/img/send.png">
             </div>
         </div>
