Fixed disabled textarea and submit button. Added animation cancelling for the model.

--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
             <div id="chatLog" class="chatlog"></div>
             <div class="input-container">
                 <textarea id="userInput" class="user-input" disabled="true"></textarea>
-                <img id="userSubmit" class="user-submit" src="src/img/send.png">
+                <div id="userSubmit" class="user-submit disabled"><img src="src/img/send.png"></div>
             </div>
         </div>
     </div>
