--- a/website_alt/about.html
+++ b/website_alt/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WEBDEV CREATIONS</title>
+        <title>Home</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body style="background-color: #000;"class="about_background">
