--- a/website_alt/chatbot.html
+++ b/website_alt/chatbot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WEBDEV CREATIONS</title>
+        <title>Chatbot</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body style="background-color: black"class="chatbot_background">
