--- a/website_alt/index.html
+++ b/website_alt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WEBDEV CREATIONS</title>
+        <title>About</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body style="background-color: #000;"class="home_background">
