--- a/website_alt/about.html
+++ b/website_alt/about.html
@@ -15,6 +15,7 @@
             </div>
             <div class="about_title">
                 <h1>About this project:</h1>
+                <p>blah blah blah</p>
             </div>
         </header>
     </body>
