--- a/website_alt/index.html
+++ b/website_alt/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body style="background-color: #000;"class="home_background">
+
         <header>
             <div class="main">
                 <ul>
@@ -14,7 +15,7 @@
                 </ul>
             </div>
             <div class="home_title">
-                <h1>CHATBOT PROJECT</h1>
+                <h1>PROJECT MARVIN</h1>
             </div>
             <div class="home_subtitle">
                 <h1>Created by Øyvind, Stian, Mads</h1>
@@ -22,6 +23,9 @@
             <div class="home_button">
                 <a href="chatbot.html" class="btn">Start Session</a>
             </div>
+            <div id="particles-js"></div>
+            <script type="text/javascript" src="particles.js"></script>
+            <script type="text/javascript" src="app.js"></script>
         </header>
     </body>
 </html>
