--- a/website_alt/about.html
+++ b/website_alt/about.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body style="background-color: #000;"class="about_background">
-        <header>
-            <div class="main">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="chatbot.html">Chatbot</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
-                </ul>
-            </div>
-            <div class="about_title">
-                <h1>About this project:</h1>
-                <p>blah blah blah</p>
-            </div>
-        </header>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body class="about_background">
+    <header>
+        <ul>
+            <li class="link"><a href="index.html">Home</a></li>
+            <li class="link"><a href="chatbot.html">Chatbot</a></li>
+            <li class="link active"><a href="about.html">About</a></li>
+        </ul>
+    </header>
+    
+    <div class="about_title">
+        <h1>About this project:</h1>
+        <p>blah blah blah</p>
+    </div>
+</body>
 </html>
