--- a/website_alt/index.html
+++ b/website_alt/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>About</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body style="background-color: #000;"class="home_background">
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>About</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <body class="home_background">
         <header>
-            <div class="main">
-                <ul>
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li><a href="chatbot.html">Chatbot</a></li>
-                    <li><a href="about.html">About</a></li>   
-                </ul>
-            </div>
-            <div class="home_title">
-                <h1>PROJECT MARVIN</h1>
-            </div>
-            <div class="home_subtitle">
-                <h1>Created by Øyvind, Stian, Mads</h1>
-            </div>
-            <div class="home_button">
-                <a href="chatbot.html" class="btn">Start Session</a>
-            </div>
-            <div id="particles-js"></div>
-            <script type="text/javascript" src="particles.js"></script>
-            <script type="text/javascript" src="app.js"></script>
+            <ul>
+                <li class="link active"><a href="index.html">Home</a></li>
+                <li class="link"><a href="chatbot.html">Chatbot</a></li>
+                <li class="link"><a href="about.html">About</a></li>   
+            </ul>
         </header>
+
+        <div class="home_title">
+            <h1>PROJECT MARVIN</h1>
+        </div>
+        <div class="home_subtitle">
+            <h1>Created by Øyvind, Stian, Mads</h1>
+        </div>
+        <div class="home_button">
+            <a href="chatbot.html" class="btn">Start Session</a>
+        </div>
+        <div id="particles-js"></div>
+
+        <script type="text/javascript" src="particles.js"></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
+</body>
 </html>
