--- a/website_alt/chatbot.html
+++ b/website_alt/chatbot.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Chatbot</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body style="background-color: black"class="chatbot_background">
-        <header>
-            <div class="main">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li class="chatbot"><a href="chatbot.html">Chatbot</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
-            </div>
-            <div id="chatbot_wframe">
-                <div style="color: #fff" id="chatbot_wframe_inside">
-                    Input
-                </div>
-            </div>
-        </header>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Chatbot</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body class="chatbot_background">
+    <header>
+        <ul>
+            <li class="link"><a href="index.html">Home</a></li>
+            <li class="link active"><a href="chatbot.html">Chatbot</a></li>
+            <li class="link"><a href="about.html">About</a></li>
+        </ul>
+    </header>
+
+    <div id="chatbot_wframe">
+        <div id="chatbot_wframe_inside">
+            Input
+        </div>
+    </div>
+</body>
 </html>
