--- a/website_alt/index.html
+++ b/website_alt/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="particles-js"></div>
 
-        <script type="text/javascript" src="particles.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </body>
