--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,12 @@
     <div class="interface-container">
         <div class="bot-window">
             <canvas id="botCanvas" class="bot-canvas"></canvas>
+            <svg id="botLoader" class="loader" width="200" height="200" viewBox="0 0 100 100">
+                <polyline class="line-cornered stroke-still" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
+                <polyline class="line-cornered stroke-still" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
+                <polyline class="line-cornered stroke-animation" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
+                <polyline class="line-cornered stroke-animation" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
+            </svg>
         </div>
         <div class="chat">
             <div id="chatLog" class="chatlog"></div>
