--- a/app/index.html
+++ b/app/index.html
@@ -65,10 +65,7 @@
     
     <!-- ParticleJS responsible for creating the start screen particle effect,
     ID is included to remove script later at runtime-->
-    <script id="particleScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <!-- The BABYLON.js library and mesh loaders used for rendering 3D models -->
-    <script type="text/javascript" src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script type="text/javascript" src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script id="particleScript" type="text/javascript" src="js/lib/particles.min.js"></script>
     <!-- Setup is responsible for creating a Babylon engine and scene, loading
     appropriate assets and running the animation loop -->
     <script type="text/javascript" src="js/babylonSetup.js"></script>
@@ -79,7 +76,7 @@
     <!-- Manager to easily interact with TTS engine -->
     <script type="text/javascript" src="js/speechManager.js"></script>
     <!-- Config grabs the appropriate element and displays the particle effect -->
-    <script type="text/javascript" src="js/parrticleConfig.js"></script>
+    <script type="text/javascript" src="js/particleConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
