--- a/app/index.html
+++ b/app/index.html
@@ -31,52 +31,50 @@
             </svg>
         </div>
         <div class="chat">
-            <div id="chatLog" class="chatlog"></div>
+            <div id="chatLog" class="chatlog scroll"></div>
             <div class="input-container">
                 <span class="typing-indicator"><strong>Marvin</strong> is typing ...</span>
-                <textarea id="userInput" class="user-input" disabled="true" placeholder="Chat here ..."></textarea>
+                <textarea id="userInput" class="user-input scroll" disabled="true" placeholder="Chat here ..."></textarea>
                 <div id="userSubmit" class="user-submit disabled"><img src="img/send.png"></div>
             </div>
         </div>
     </div>
 
-    <div class="interface-container interface-about" data-tab="team">
+    <div class="interface-container interface-about scroll" data-tab="team">
         <h2>About the Team</h2>
         <p>We are people and we made the thing</p>
         <h3>Subheading</h3>
         <p>more text using <a href="#">some stuff</a></p>
     </div>
 
-    <div class="interface-container interface-about" data-tab="project">
+    <div class="interface-container interface-about scroll" data-tab="project">
         <h2>About the Project</h2>
-        <p>As with many project, ours uses a fair bit of different components from all around the internet. This section is dedicated to shed some light on the inner workings of Marvin, and what was used to achieve the end result.</p>
-        <h3>Marvin's voice</h3>
-        <p>The TTS (Text-To-Speech) technology uses the standard JavaScript SpeechSynthesis API. If it sounds a little weird, it's because Chromium doesn't have access to the same amount of different voices that Google Chrome has, and is probably using your Operating System's default voice.</p>
+        <p>As with many project, ours uses a collection of different components, working together to form what is seen on screen. This section is dedicated to shed some light on the inner workings of Marvin, and what was used to achieve the end result.</p>
         <h3>Marvin's 3D model</h3>
         <p>The 3D model of Marvin was made by the user <a data-link="https://free3d.com/user/safa9raja3" href="#">safa9raja3</a> and was gotten from <a data-link="https://free3d.com/3d-model/low-poly-15101.html" href="#">Free3D.com</a>.</p>
         <p>Further texture modifications were done by us, and rigging (creating a model skeleton for animations) + animations are from <a data-link="https://www.mixamo.com/#/" href="#">Adobe's Mixamo</a>.</p>
         <h3>Marvin's brain</h3>
-        <p>His brain uses modified data files from <a data-link="https://github.com/drwallace" href="#">Richard Wallace (drwallace)</a> and can be found <a data-link="https://github.com/drwallace/aiml-en-us-foundation-alice" href="#">on GitHub</a>.</p>
-        <p>Marvin's brain also uses medical data about symptoms connected to illnesses, gotten from <a data-link="https://people.dbmi.columbia.edu/~friedma/Projects/DiseaseSymptomKB/index.html" href="#">people.dbmi.columbia.edu</a>.</p>
-        <p>Together these two components are used by a pre-compiled Python script to generate Marvin's responses.</p>
+        <p>His brain uses modified data files from Richard Wallace (drwallace), which can be found on <a data-link="https://github.com/drwallace/aiml-en-us-foundation-alice" href="#">GitHub</a>, utilized by the <a data-link="https://pypi.org/project/aiml/" href="#">aiml package</a> from PyPi.</p>
+        <p>Marvin's brain also uses medical data about symptoms connected to illnesses, gotten from <a data-link="https://people.dbmi.columbia.edu/~friedma/Projects/DiseaseSymptomKB/index.html" href="#">people.dbmi.columbia.edu</a>, then used by the <a data-link="https://pypi.org/project/ChatterBot/" href="#">ChatterBot package</a> from PyPi.</p>
+        <p>Together these two components are used by a pre-compiled Python script to generate Marvin's responses and decide the final output.</p>
         <h3>Behind the scenes and interface</h3>
-        <p>The project itself is based on NodeJS and Electron, making use of the power of JavaScript, HTML and CSS to power both logic, markup and looks.</p>
+        <p>The project itself is based on the NodeJS JavaScript runtime + Electron, making use of the power of HTML, CSS and JavaScript to achieve markup, styling and logic.</p>
     </div>
     
     <!-- ParticleJS responsible for creating the start screen particle effect,
     ID is included to remove script later at runtime-->
     <script id="particleScript" type="text/javascript" src="js/lib/particles.min.js"></script>
+    <!-- Config grabs the appropriate element and displays the particle effect -->
+    <script type="text/javascript" src="js/particleConfig.js"></script>
+    <!-- Interface to manipulate and change the screen elements -->
+    <script type="text/javascript" src="js/interface.js"></script>
     <!-- Setup is responsible for creating a Babylon engine and scene, loading
     appropriate assets and running the animation loop -->
     <script type="text/javascript" src="js/babylonSetup.js"></script>
-    <!-- Interface to manipulate and change the screen elements -->
-    <script type="text/javascript" src="js/interface.js"></script>
     <!-- Manager provides a wrapper around playing and queueing up animations -->
     <script type="text/javascript" src="js/animationManager.js"></script>
     <!-- Manager to easily interact with TTS engine -->
     <script type="text/javascript" src="js/speechManager.js"></script>
-    <!-- Config grabs the appropriate element and displays the particle effect -->
-    <script type="text/javascript" src="js/particleConfig.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
