Added medical bot functionality. Fixed chatbot sometimes getting stuck in infinite loops

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <div id="particlesBG">
         <span class="title-start">Marvin: The Paranoid Android</span>
         <input id="btnStart" class="btn-start" type="button" value="Continue >" />
+        <span class="warning">* WARNING: The responses are not intended as professional medical advice.</span>
     </div>
 
     <ul class="main-menu">
