--- a/app/index.html
+++ b/app/index.html
@@ -43,9 +43,13 @@
 
     <div class="interface-container interface-about scroll" data-tab="team">
         <h2>About the Team</h2>
-        <p>We are people and we made the thing</p>
-        <h3>Subheading</h3>
-        <p>more text</p>
+        <p>The project was made by the following team members:</p>
+        <h3>Stian Andersen</h3>
+        <p>Bachelor Administration & Economics, Bachelor Applied Data Science (1st year)</p>
+        <h3>Mads Merkesdal</h3>
+        <p>Bachelor Applied Data Science (1st year)</p>
+        <h3>Øyvind Finsnes</h3>
+        <p>Bachelor Cyber Security (1st year)</p>
     </div>
 
     <div class="interface-container interface-about scroll" data-tab="project">
